<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yo Tani Niaga</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_mandatory">Password<font color='#FF0000'>*</font></string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="srTitleMyApplication">My Application</string>
    <string name="srTitleChangePasswordProfile">Change Password</string>
    <string name="srExpectedSalaryValue">Rp %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="get_token_sms">Hi, from Yo Tani. Your token is </string>
    <string name="register">Register</string>
    <string name="verification_code_has_sent_to">A verification code has been sent to the number</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to</string>
    <string name="validate">Validate</string>
    <string name="please_request_new_token">Please request new token</string>
    <string name="phone_no">Phone No</string>
    <string name="seconds_remaining">Seconds remaining</string>
    <string name="second_remaining">Second remaining</string>
    <string name="get_new_token">Get New Token</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="notification_listener_service" translatable="false">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation" translatable="false">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="page_position" translatable="false">Page %1$d</string>
    <string name="item_position" translatable="false">Item %1$d</string>
    <string name="first_rv" translatable="false">Horizontal RecyclerView</string>
    <string name="second_rv">Vertical RecyclerView</string>
    <string name="srChangePassword">Change Password</string>
    <string name="srNewPassword">New Password</string>
    <string name="srHintNewPassword">Input new Password</string>
    <string name="srTxtBtnContinue">Continue</string>
    <string name="srTitleSuccess">Was successful</string>
    <string name="srMessageSuccess">New Password Successfully Updated</string>
    <string name="srMessageSuccessCallUs">Data Sent Successfully</string>
    <string name="srGoToLoginFromDialog">Login Now</string>
    <string name="srTitleDenied">Check Again</string>
    <string name="srReturn">Back</string>
    <string name="registered_password">Registered Password</string>
    <string name="please_login_to_access_full_feature">Please Log In to access full feature</string>
    <string name="srConfirmNewPasswordChangPassword">Confirm New Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="did_not_have_account">"You don\'t have account? "</string>
    <string name="copyright">Copyright 2019 </string>
    <string name="srLblBtnRegister">Register</string>
    <string name="srLblInfomationWillSendMessage">We will send an SMS verification code</string>
    <string name="please_enter_phone_number_registered_in_yotani_kerja">Please enter phone number registered in YoTani Niaga</string>
    <string name="registered_phone">Registered Phone</string>
    <string name="continue_text">Continue</string>
    <string name="opening_statement">WELCOME</string>
    <string name="result_search">Searching Result</string>
    <string-array name="tampilkan">
        <item>5 Data</item>
        <item>10 Data</item>
        <item>15 Data</item>
        <item>20 Data</item>
        <item>25 Data</item>
        <item>30 Data</item>
    </string-array>
    <string name="detail_notif">Complete Info</string>
    <string name="srConfirmationRegister">Are the numbers you entered correct?</string>
    <string name="srTxtBtnNegative">No, change</string>
    <string name="srTxtBtnPositive">Yes, right</string>
    <string name="srTxtBtnConfirm">Confirmation</string>
    <string name="srTxtBtnCancel">Cancel</string>
    <string name="srErrorPhoneNo">Please enter your registered telephone number</string>
    <string name="srErrorPhoneNoNotRegistered">Please insert your phone number</string>
    <string name="number">0812-1234-5678</string>
    <string name="srInputVerificationCode">Input verification code</string>
    <string name="verification">Verification</string>
    <string name="srMessageDenied">There seems to be an inequality in the password</string>
    <string name="srDrawerHome">Home</string>
    <string name="srDrawerProfile">Profile</string>
    <string name="srDrawerCareer">Career</string>
    <string name="srDrawerFriend">Friend</string>
    <string name="srDrawerTradeUnion">Trade Union</string>
    <string name="srDrawerBPJSKetenagakerjaan">BPJS Ketenagakerjaan</string>
    <string name="srDrawerHelp">Help</string>
    <string name="srDrawerLogout">Log Out</string>
    <string name="srAreYouSureLost">Unsaved data will be lost!</string>
    <string name="srSure">ARE YOU SURE</string>
    <string name="srToLogout">Want to Log Out?</string>
    <string name="srKTPValid">KTP Valid</string>
    <string name="srKTPInvalid">KTP Invalid</string>
    <string name="srCancel">Cancel</string>
    <string name="srLogOut">Log Out</string>
    <string name="srToChangeLanguage">Want to change language?</string>
    <string name="srChangingLanguage">Changing language</string>
    <string name="srYes">Yes</string>
    <string name="title_toolbar_notif">Notifikasi</string>
    <string name="title_toolbar_News">News</string>
    <string name="refresh_notif">Show More</string>
    <string name="titleToolbarTradeUnionFilterResult">Search Result</string>
    <string name="srListHelp">List Help</string>
    <string name="srSearchHelp">Search Help</string>
    <string name="srProfile">Profile</string>
    <string name="srNeedMoreHelp">Need More Help?</string>
    <string name="srCallUs">Call Us</string>
    <string name="srDetailProblem">Detail Problem</string>
    <string name="srDescription">Description</string>
    <string name="news_palm">Palm News</string>
    <string name="news">News</string>
    <string name="silahkan_log_in_untuk_mengakses_fitur_lebih_lengkap">Silahkan masuk untuk mengakses fitur lebih lengkap</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="titleToolbarHelp">Help</string>
    <string name="hastag_help">#Staffing</string>
    <string name="ticket_help">Ticket</string>
    <string name="hint_search_help">Search Help</string>
    <string name="text_button_add_question">Add Question</string>
    <string name="text_list_help">List Help</string>
    <string name="button_help_answer">Reply</string>
    <string name="srTxtOldPassword">Masukan kata sandi lama</string>
    <string name="srErrorTextInputPassword">cek kembali kata sandi anda</string>
    <string name="cancel_application_item_action">Cancel Application</string>
    <string name="please_wait_processing_your_request">Please wait Processing your request</string>
    <string name="loading">Loading</string>
    <string name="title">Title</string>
    <string name="hint_write_message">Write Message</string>
    <string name="lable_fullname_Help">Name</string>
    <string name="lable_email_Help">Email</string>
    <string name="lable_phonenumber_Help">No.Hp</string>
    <string name="lable_information_Help">Infomation</string>
    <string name="hint_image_Help_Detail">Click Picture to zoom</string>
    <string name="srName">Name</string>
    <string name="srNameMandatory">Name<font color='#FF0000'>*</font></string>
    <string name="srEmail">Email</string>
    <string name="description">Description</string>
    <string name="phoneNo">Phone No</string>
    <string name="phoneNoMandatory">Phone No<font color='#FF0000'>*</font></string>
    <string name="attachment">Attachment</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="welcomeToYotaniKerja">Welcome to YoTani Niaga</string>
    <string name="pleaseCompleteYourData">Please complete your data</string>
    <string name="pleaseCompleteNotification">Are you sure?</string>
    <string name="worker">Worker</string>
    <string name="agent">Agent</string>
    <string name="inputYourName">Input your name</string>
    <string name="inputYourPhoneNo">Input your phone number</string>
    <string name="inputYourPassword">Input your password</string>
    <string name="back">Back</string>
    <string name="workingSamePosition">Im still working in a same position</string>
    <string name="choose2">Choose</string>
    <string name="srCamera">Camera</string>
    <string name="srGallery">Gallery</string>
    <string name="srOk">Ok</string>
    <string name="srSeeProfile">Profile</string>
    <string name="srOnlineTest">Online Test</string>
    <string name="srJobVacancy">Job Vacancy</string>
    <string name="srErrorPleaseInputFullName">Please input full name</string>
    <string name="srValidatePassword">Please use minimal 8 character alphanumeric</string>
    <string name="srErrorMessageConfirmPasswordNotSame">Confirm password not match</string>
    <string name="srValidationAlphanumeric" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890" "</string>
    <string name="srValidationAlphanumericPasswordDigits" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="srPleaseSelectProvince">Mohon pilih provinsi</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="total_tree">Total Tree</string>
    <string name="total_tree_mandatory">Total Tree<font color='#FF0000'>*</font></string>
    <string name="garden_area">Garden Area</string>
    <string name="garden_area_mandatory">Garden Area<font color='#FF0000'>*</font></string>
    <string name="delivery">Delivery</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="farmer">Farmer</string>
    <string name="supplier">Supplier</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="location_name_district_subdistrict">Location Name/District/Subdistrict</string>
    <string name="location_name_district_subdistrict_mandatory">Location Name/District/Subdistrict<font color='#FF0000'>*</font></string>
    <string name="invoice">Invoice</string>
</resources>