<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_ico_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/navigation_delivery"
        android:icon="@drawable/ic_delivery"
        android:title="@string/delivery" />

    <item
        android:id="@+id/navigation_notifications"
        app:actionLayout="@layout/layout_unread_message"
        android:icon="@drawable/ic_invoice"
        android:title="@string/invoice"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
