<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/garden_area_mandatory"
            android:textColor="#7d7d7d"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edtGardenArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_input"
            android:layout_marginTop="6dp"
            android:hint="@string/garden_area"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/lblErrorGardenArea"
            style="@style/ErrorTextInput"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srPleaseSelectProvince"
            android:textColor="@color/colorTextInputError"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/total_tree_mandatory"
            android:textColor="#7d7d7d"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edtTotalTree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_tree"
            android:background="@drawable/shape_text_input"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/lblErrorKtpProvinsi"
            style="@style/ErrorTextInput"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srPleaseSelectProvince"
            android:textColor="@color/colorTextInputError"/>

    </LinearLayout>
</layout>