<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.register.RegisterNextActivity">

        <include
            android:id="@+id/appbarLayout"
            layout="@layout/toolbar_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nstRegisterWorkerAgent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/appbarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:paddingEnd="50dp"
                    android:text="@string/welcomeToYotaniKerja"
                    android:textSize="@dimen/_16sdp"
                     />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:text="@string/pleaseCompleteYourData"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <LinearLayout
                    android:id="@+id/lytWorkerRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/lytFarmer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_check_worker_agent_active"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_farmer"
                                android:layout_width="19dp"
                                android:layout_height="19dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_radio_active" />

                            <TextView
                                android:id="@+id/lbl_farmer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:fontFamily="@font/nunito_sans_semi_bold"
                                android:text="@string/farmer"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lytSupplier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:foreground="?attr/selectableItemBackground"
                            android:background="@drawable/bg_check_worker_agent_pasif"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_supplier"
                                android:layout_width="19dp"
                                android:layout_height="19dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_radio_pasive2" />

                            <TextView
                                android:id="@+id/lbl_supplier"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:fontFamily="@font/nunito_sans_semi_bold"
                                android:text="@string/supplier"
                                android:textColor="@color/ligh_gray2"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <!--    nama-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:text="@string/srNameMandatory"
                            android:textStyle="bold"
                            android:textSize="@dimen/font_title_faq" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/txtFullNameRegisterWorker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_text_input"
                        android:digits="@string/srValidationAlphanumeric"
                        android:fontFamily="@font/nunito_sans_italic"
                        android:hint="@string/inputYourName"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/lblErrorFullNameRegisterWorker"
                        style="@style/ErrorTextInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/srErrorPleaseInputFullName"
                        android:textColor="@color/colorTextInputError"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/lblErrorPhoneNoRegisterWorker"
                        style="@style/ErrorTextInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/srErrorPhoneNo"
                        android:textColor="@color/colorTextInputError"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:text="@string/prompt_password_mandatory"
                            android:textStyle="bold"
                            android:textSize="@dimen/font_title_faq" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:hintTextAppearance="@style/TextLabelHint"
                        app:layout_constraintEnd_toEndOf="@+id/tILNewPassword"
                        app:layout_constraintStart_toStartOf="@+id/tILNewPassword"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#3B000000">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPasswordRegisterWorker"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:background="@drawable/shape_text_input"
                            android:digits="@string/srValidationAlphanumericPasswordDigits"
                            android:fontFamily="@font/nunito_sans_italic"
                            android:hint="@string/inputYourPassword"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/lblErrorPasswordRegister"
                        style="@style/ErrorTextInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/srValidatePassword"
                        android:textColor="@color/colorTextInputError"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:text="@string/confirm_new_password"
                            android:textStyle="bold"
                            android:textSize="@dimen/font_title_faq" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:hintTextAppearance="@style/TextLabelHint"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#3B000000">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtConfirmPasswordRegisterWorker"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:background="@drawable/shape_text_input"
                            android:digits="@string/srValidationAlphanumericPasswordDigits"
                            android:fontFamily="@font/nunito_sans_italic"
                            android:hint="@string/inputYourPassword"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/lblErrorConfirmPasswordRegister"
                        style="@style/ErrorTextInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/srErrorMessageConfirmPasswordNotSame"
                        android:textColor="@color/colorTextInputError"
                        android:visibility="gone"
                         />

                    <!--    location name-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="gone"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:text="@string/location_name_district_subdistrict_mandatory"
                            android:textSize="@dimen/font_title_faq" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/txtPhoneNoRegisterWorker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:background="@drawable/shape_text_input"
                        android:fontFamily="@font/nunito_sans_italic"
                        android:hint="@string/location_name_district_subdistrict"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="51dp"
                        android:layout_marginBottom="50dp">

                        <Button
                            android:id="@+id/btnKembaliWorker"
                            style="@style/ButtonConfirmationNegative"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="11dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:text="@string/back" />

                        <Button
                            android:id="@+id/btnRegisterWorker"
                            style="@style/ButtonYoTani"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="11dp"
                            android:layout_weight="1"
                            android:text="@string/register" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>